examples/scanner/literals/fail/unclosed_string.axo
const bad = 3 § 4
print(bad)
